# pdf-chart-extraction

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docs/: SKILL_MARKETPLACE.md
plugins/pdf-chart-extraction/.codex-plugin/: plugin.json
plugins/pdf-chart-extraction/skills/pdf-chart-extraction/: SKILL.md
scripts/: batch_extract.py  extract_charts.py
src/pdf_chart_extraction/: __init__.py  cli.py  extractor.py  models.py  utils.py
tests/: test_extractor.py
