[project]
name = "pdf-chart-extraction"
version = "0.1.0"
description = "Extract charts, figures, and tables from academic PDFs for AI agent analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "James-Leong", email = "jamesleong27@gmail.com" },
]
keywords = ["pdf", "chart", "figure", "table", "extraction", "academic", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0,<3.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pdf-chart-extract = "pdf_chart_extraction.cli:main"

[project.urls]
Homepage = "https://github.com/James-Leong/pdf-chart-extraction"
Repository = "https://github.com/James-Leong/pdf-chart-extraction"
Issues = "https://github.com/James-Leong/pdf-chart-extraction/issues"
Changelog = "https://github.com/James-Leong/pdf-chart-extraction/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_chart_extraction"]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
